[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/BodyPartResourceEditor/BodyPartResEditor.gd" type="Script" id=2]
[ext_resource path="res://addons/BodyPartResourceEditor/CapturingTRect.gd" type="Script" id=3]

[node name="BodyPartEditor" type="Control"]
margin_right = 6.0
margin_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path" type="LineEdit" parent="layout"]
margin_right = 64.0
margin_bottom = 24.0

[node name="TextureRect" type="TextureRect" parent="layout"]
margin_top = 28.0
margin_right = 64.0
margin_bottom = 92.0
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="layout/TextureRect"]
[connection signal="text_entered" from="layout/Path" to="." method="_on_Path_text_entered"]
[connection signal="left_clicked" from="layout/TextureRect" to="." method="_on_TextureRect_left_clicked"]
[connection signal="right_clicked" from="layout/TextureRect" to="." method="_on_TextureRect_right_clicked"]
